# taobao-recsys-pipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
src/taobao_recsys_pipeline/basic/: activation.py  features.py  initializers.py  layers.py
src/taobao_recsys_pipeline/configs/: ctr_train.yaml  match_train.yaml  train.yaml
src/taobao_recsys_pipeline/configs/callbacks/: default.yaml
src/taobao_recsys_pipeline/configs/data/: mnist.yaml  taobao.yaml
src/taobao_recsys_pipeline/configs/experiment/: exp_match_default.yaml
src/taobao_recsys_pipeline/configs/logger/: wandb.yaml
src/taobao_recsys_pipeline/configs/model/: match_youtube_dnn.yaml  mnist.yaml
src/taobao_recsys_pipeline/configs/trainer/: gpu.yaml
src/taobao_recsys_pipeline/datamodules/: taobao_datamodule.py
src/taobao_recsys_pipeline/l_module/: ctr_module.py  match_module.py
src/taobao_recsys_pipeline/losses/: losses.py
src/taobao_recsys_pipeline/metrics/: ctr_metrics.py  match_metrics.py
src/taobao_recsys_pipeline/models/matching/: youtube_dnn.py
src/taobao_recsys_pipeline/models/ranking/: din.py
src/taobao_recsys_pipeline/scripts/: match_train.py  prepare_data.py  train.py
src/taobao_recsys_pipeline/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: test_foo.py
